--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -62,7 +62,8 @@
             android:textAlignment="center"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
-            android:textSize="10sp" />
+            android:textSize="10sp"
+            android:onClick="handleCancel"/>
 
         <Button
             android:text="2"
@@ -75,7 +76,8 @@
             android:textSize="10sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color" />
+            android:textColor="@color/button_text_color"
+            android:onClick="handleCancel"/>
 
         <Button
             android:text="3"
@@ -88,7 +90,8 @@
             android:textSize="10sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color" />
+            android:textColor="@color/button_text_color"
+            android:onClick="handleCancel" />
 
         <Button
             android:text="4"
@@ -101,7 +104,8 @@
             android:textSize="10sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color" />
+            android:textColor="@color/button_text_color"
+            android:onClick="handleCancel" />
 
         <Button
             android:text="5"
@@ -114,7 +118,8 @@
             android:textSize="10sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color" />
+            android:textColor="@color/button_text_color"
+            android:onClick="handleCancel"/>
 
         <Button
             android:text="6"
@@ -127,7 +132,8 @@
             android:textSize="10sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color" />
+            android:textColor="@color/button_text_color"
+            android:onClick="handleCancel" />
 
         <Button
             android:text="7"
@@ -140,7 +146,8 @@
             android:textSize="10sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color" />
+            android:textColor="@color/button_text_color"
+            android:onClick="handleCancel" />
 
         <Button
             android:text="8"
@@ -153,7 +160,8 @@
             android:textSize="10sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color" />
+            android:textColor="@color/button_text_color"
+            android:onClick="handleCancel" />
 
         <Button
             android:text="9"
@@ -166,7 +174,8 @@
             android:textSize="10sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color" />
+            android:textColor="@color/button_text_color"
+            android:onClick="handleCancel"/>
 
         <Button
             android:text="A"
@@ -179,7 +188,8 @@
             android:textSize="10sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color" />
+            android:textColor="@color/button_text_color"
+            android:onClick="handleCancel" />
 
         <Button
             android:text="C"
@@ -192,7 +202,8 @@
             android:textSize="10sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color" />
+            android:textColor="@color/button_text_color"
+            android:onClick="handleCancel" />
 
         <Button
             android:text="B"
@@ -205,7 +216,8 @@
             android:textSize="10sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color" />
+            android:textColor="@color/button_text_color"
+            android:onClick="handleCancel" />
     </LinearLayout>
 
     <LinearLayout
@@ -222,7 +234,8 @@
             android:id="@+id/button1"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible"/>
 
         <Button
             android:text="2"
@@ -231,7 +244,8 @@
             android:id="@+id/button2"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible" />
 
         <Button
             android:text="3"
@@ -240,7 +254,8 @@
             android:id="@+id/button3"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible" />
 
         <Button
             android:text="4"
@@ -249,7 +264,8 @@
             android:id="@+id/button4"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible" />
 
         <Button
             android:text="5"
@@ -258,7 +274,8 @@
             android:id="@+id/button5"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible" />
 
         <Button
             android:text="6"
@@ -267,7 +284,8 @@
             android:id="@+id/button6"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible" />
 
         <Button
             android:text="7"
@@ -276,7 +294,8 @@
             android:id="@+id/button7"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible" />
     </LinearLayout>
 
     <LinearLayout
@@ -293,7 +312,8 @@
             android:id="@+id/button8"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible" />
 
         <Button
             android:text="9"
@@ -302,7 +322,8 @@
             android:id="@+id/button9"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible"/>
 
         <Button
             android:text="10"
@@ -311,7 +332,8 @@
             android:id="@+id/button10"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible" />
 
         <Button
             android:text="11"
@@ -320,7 +342,8 @@
             android:id="@+id/button11"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible" />
 
         <Button
             android:text="12"
@@ -329,7 +352,8 @@
             android:id="@+id/button12"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible"/>
 
         <Button
             android:text="13"
@@ -338,7 +362,8 @@
             android:id="@+id/button13"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible" />
 
         <Button
             android:text="14"
@@ -347,7 +372,8 @@
             android:id="@+id/button14"
             android:layout_weight="1"
             android:textColor="@color/button_text_color"
-            style="@android:style/Widget.Holo.Button" />
+            style="@android:style/Widget.Holo.Button"
+            android:onClick="makeVisible" />
     </LinearLayout>
 
     <TextView
