--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -63,6 +63,7 @@
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
             android:textSize="10sp"
+            android:visibility="invisible"
             android:onClick="handleCancel"/>
 
         <Button
@@ -77,6 +78,7 @@
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
+            android:visibility="invisible"
             android:onClick="handleCancel"/>
 
         <Button
@@ -91,6 +93,7 @@
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
+            android:visibility="invisible"
             android:onClick="handleCancel" />
 
         <Button
@@ -105,6 +108,7 @@
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
+            android:visibility="invisible"
             android:onClick="handleCancel" />
 
         <Button
@@ -119,6 +123,7 @@
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
+            android:visibility="invisible"
             android:onClick="handleCancel"/>
 
         <Button
@@ -133,6 +138,7 @@
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
+            android:visibility="invisible"
             android:onClick="handleCancel" />
 
         <Button
@@ -147,6 +153,7 @@
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
+            android:visibility="invisible"
             android:onClick="handleCancel" />
 
         <Button
@@ -161,6 +168,7 @@
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
+            android:visibility="invisible"
             android:onClick="handleCancel" />
 
         <Button
@@ -175,6 +183,7 @@
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
+            android:visibility="invisible"
             android:onClick="handleCancel"/>
 
         <Button
@@ -189,6 +198,7 @@
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
+            android:visibility="invisible"
             android:onClick="handleCancel" />
 
         <Button
@@ -203,6 +213,7 @@
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
+            android:visibility="invisible"
             android:onClick="handleCancel" />
 
         <Button
@@ -217,6 +228,7 @@
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
             android:textColor="@color/button_text_color"
+            android:visibility="invisible"
             android:onClick="handleCancel" />
     </LinearLayout>
 
