--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,10 +5,10 @@
     android:id="@+id/quizLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="4dp"
+    android:paddingLeft="1dp"
+    android:paddingRight="1dp"
+    android:paddingTop="4dp"
     tools:context="afdevelops.mmaquiz01.MainActivityFragment"
     tools:showIn="@layout/activity_main"
     android:orientation="vertical">
@@ -37,20 +37,11 @@
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/fighterImageView" />
 
-    <TextView
-        android:text="@string/guess_fighter"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/guessFighterTextView"
-        android:textAlignment="center"
-        android:textSize="18sp" />
-
     <LinearLayout
         android:orientation="horizontal"
         android:id="@+id/row1LinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="34dp">
+        android:layout_height="40dp"
+        android:layout_width="match_parent">
 
         <Button
             android:text="1"
@@ -61,10 +52,11 @@
             android:typeface="serif"
             android:textAlignment="center"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
-            android:textSize="10sp"
+            android:textColor="@android:color/black"
+            android:textSize="6sp"
             android:visibility="invisible"
-           />
+            android:textStyle="bold"
+            android:textAllCaps="false" />
 
         <Button
             android:text="2"
@@ -73,13 +65,14 @@
             android:id="@+id/cell2"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textSize="6sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
+            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:onClick="handleCancel"/>
+            android:onClick="handleCancel"
+            android:textAllCaps="false" />
 
         <Button
             android:text="3"
@@ -88,13 +81,14 @@
             android:id="@+id/cell3"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textSize="6sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
+            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:onClick="handleCancel" />
+            android:onClick="handleCancel"
+            android:textAllCaps="false" />
 
         <Button
             android:text="4"
@@ -103,13 +97,14 @@
             android:id="@+id/cell4"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textSize="6sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
+            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:onClick="handleCancel" />
+            android:onClick="handleCancel"
+            android:textAllCaps="false" />
 
         <Button
             android:text="5"
@@ -118,13 +113,14 @@
             android:id="@+id/cell5"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textSize="6sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
+            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:onClick="handleCancel"/>
+            android:onClick="handleCancel"
+            android:textAllCaps="false" />
 
         <Button
             android:text="6"
@@ -133,13 +129,14 @@
             android:id="@+id/cell6"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textSize="6sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
+            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:onClick="handleCancel" />
+            android:onClick="handleCancel"
+            android:textAllCaps="false" />
 
         <Button
             android:text="7"
@@ -148,13 +145,14 @@
             android:id="@+id/cell7"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textSize="6sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
+            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:onClick="handleCancel" />
+            android:onClick="handleCancel"
+            android:textAllCaps="false" />
 
         <Button
             android:text="8"
@@ -163,13 +161,14 @@
             android:id="@+id/cell8"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textSize="6sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
+            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:onClick="handleCancel" />
+            android:onClick="handleCancel"
+            android:textAllCaps="false" />
 
         <Button
             android:text="9"
@@ -178,13 +177,14 @@
             android:id="@+id/cell9"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textSize="6sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
+            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:onClick="handleCancel"/>
+            android:onClick="handleCancel"
+            android:textAllCaps="false" />
 
         <Button
             android:text="A"
@@ -193,13 +193,14 @@
             android:id="@+id/cell10"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textSize="6sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
+            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:onClick="handleCancel" />
+            android:onClick="handleCancel"
+            android:textAllCaps="false" />
 
         <Button
             android:text="C"
@@ -208,13 +209,14 @@
             android:id="@+id/cell11"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textSize="6sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
+            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:onClick="handleCancel" />
+            android:onClick="handleCancel"
+            android:textAllCaps="false" />
 
         <Button
             android:text="B"
@@ -223,13 +225,14 @@
             android:id="@+id/cell12"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:textStyle="normal|bold"
-            android:textSize="10sp"
+            android:textStyle="bold"
+            android:textSize="6sp"
             android:typeface="serif"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@color/button_text_color"
+            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:onClick="handleCancel" />
+            android:onClick="handleCancel"
+            android:textAllCaps="false" />
     </LinearLayout>
 
     <LinearLayout
@@ -393,20 +396,15 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="ANSWER"
-            android:layout_width="match_parent"
+            android:layout_width="155dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:id="@+id/answerTextView"
             android:textStyle="normal|bold"
             android:textAlignment="center"
-            android:textSize="24sp" />
-
-        <Button
-            android:text="-1"
-            android:layout_width="37dp"
-            android:layout_height="34dp"
-            android:id="@+id/buttonDelete" />
+            android:textSize="24sp"
+            android:visibility="invisible"
+            android:text="answer" />
 
         <Button
             android:text="+1"
@@ -422,6 +420,12 @@
             android:layout_row="0"
             android:layout_column="2"
             android:layout_width="40dp" />
+
+        <Button
+            android:text="-1"
+            android:layout_width="37dp"
+            android:layout_height="34dp"
+            android:id="@+id/buttonDelete" />
     </GridLayout>
 
 </LinearLayout>
