--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#000022</color>
     <color name="correct_answer">#00CC00</color>
     <color name="incorrect_answer">#FF0000</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
