--- a/app/src/main/res/layout/activity_opening_menu.xml
+++ b/app/src/main/res/layout/activity_opening_menu.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+
     tools:context="afdevelops.mmaquiz01.OpeningMenuActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
@@ -15,7 +15,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background">
+        android:id="@+id/RL1"
+        android:theme="@style/Theme.AppCompat.NoActionBar">
 
         <Button
             android:text="Start"
