добавлена вроде неработающая фигня - диалоговое окно с интересным фактом

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -45,183 +45,147 @@
 
         <Button
             android:text="1"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell1"
             android:layout_weight="1"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
-            android:textSize="8sp"
             android:visibility="invisible"
-            android:textStyle="bold"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
 
         <Button
             android:text="2"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell2"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="8sp"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
 
         <Button
             android:text="3"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell3"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="8sp"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
 
         <Button
             android:text="4"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell4"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="8sp"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
 
         <Button
             android:text="5"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell5"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="8sp"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
 
         <Button
             android:text="6"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell6"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="8sp"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
 
         <Button
             android:text="7"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell7"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="8sp"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
 
         <Button
             android:text="8"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell8"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="8sp"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
 
         <Button
             android:text="9"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell9"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="8sp"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
 
         <Button
             android:text="A"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell10"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="8sp"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
 
         <Button
             android:text="C"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell11"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="8sp"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
 
         <Button
             android:text="B"
-            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/cell12"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textSize="8sp"
             android:typeface="normal"
             tools:style="@android:style/Widget.Material.Button.Colored"
-            android:textColor="@android:color/black"
             android:visibility="invisible"
-            android:textAllCaps="false"
-            android:lineSpacingExtra="8sp" />
+            android:layout_width="16dp"
+            android:fontFamily="sans-serif-medium"
+            style="@style/Widget.AppCompat.Button.Borderless" />
     </LinearLayout>
 
     <LinearLayout
