--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#000022</color>
-    <color name="correct_answer">#00CC00</color>
+    <color name="correct_answer">#18d518</color>
     <color name="incorrect_answer">#FF0000</color>
 
     <color name="black_overlay">#66000000</color>
