--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,23 +15,38 @@
         android:layout_height="wrap_content"
         android:id="@+id/levelNameTextView"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="@dimen/fab_margin"
         android:textAlignment="center"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_marginTop="5dp" />
+
+    <TextView
+        android:text="answer"
+        android:layout_width="match_parent"
+        android:id="@+id/answerTextView"
+        android:layout_height="30dp"
+        android:textSize="24sp"
+        android:textAlignment="center" />
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="@dimen/fab_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_margin="@dimen/activity_horizontal_margin"
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:contentDescription="@string/image_description"
         android:scaleType="fitCenter"
         app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/fighterImageView" />
+        android:id="@+id/fighterImageView"
+        android:layout_height="0dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:id="@+id/textViewRightAnswer"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:visibility="invisible"
+        android:layout_height="70dp" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -332,16 +347,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="155dp"
+        <Button
+            android:text="RESET QUIZ"
+            android:layout_width="188dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:id="@+id/answerTextView"
-            android:textStyle="normal|bold"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            android:visibility="invisible"
-            android:text="answer" />
+            android:id="@+id/buttonReset"
+            android:textSize="18sp"
+            android:visibility="invisible"/>
 
         <Button
             android:text="+1"
